--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1' //json-simple
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
+	implementation 'org.hibernate:hibernate-core:5.4.33.Final' //hibernate 버전관리
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8' //modelMapper
 }
 
 tasks.named('test') {
