--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ java {
 	sourceCompatibility = '17'
 }
 
+ext["hibernate.version"] = "5.4.22.Final"
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -36,6 +38,13 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1' //json-simple
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis' // redis
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
