--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ server:
       force: true
 
 spring:
+  redis:
+    host: localhost
+    port: 6379
   application:
     name: user-service
   main:
