--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ java {
 	sourceCompatibility = '17'
 }
 
-ext["hibernate.version"] = "5.4.22.Final"
+//ext["hibernate.version"] = "5.4.22.Final"
 
 configurations {
 	compileOnly {
@@ -38,6 +38,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1' //json-simple
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
+	implementation 'org.hibernate:hibernate-core:5.4.33.Final' //hibernate 버전관리
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis' // redis
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
